New changes in graphs

--- a/Maturity Monitor/Maturity-Monitor-Info.plist
+++ b/Maturity Monitor/Maturity-Monitor-Info.plist
@@ -12,5 +12,9 @@
 	</array>
 	<key>LSMinimumSystemVersion</key>
 	<string>13.0</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Inter-Italic.otf</string>
+	</array>
 </dict>
 </plist>
