--- a/Maturity Monitor/amplify/backend/backend-config.json
+++ b/Maturity Monitor/amplify/backend/backend-config.json
@@ -1,4 +1,10 @@
 {
+  "analytics": {
+    "maturitymonitor": {
+      "providerPlugin": "awscloudformation",
+      "service": "Pinpoint"
+    }
+  },
   "api": {
     "maturitymonitor": {
       "dependsOn": [
